[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/GUI/GameOver_Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/ResourceScenes/ScenarioResources/Menu_Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Font/UI_font_Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Font/UI_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Scenes/ResourceScenes/ScenarioResources/Transition_Out.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Scenes/ResourceScenes/ScenarioResources/Transition_In.tscn" type="PackedScene" id=6]

[node name="GameOver_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="BlurPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 60
custom_constants/margin_left = 100
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_left = 100.0
margin_top = 60.0
margin_right = 1820.0
margin_bottom = 1020.0
custom_constants/separation = 200

[node name="P1_Win" type="Label" parent="GUI/VBoxContainer"]
margin_right = 1720.0
margin_bottom = 249.0
custom_fonts/font = ExtResource( 3 )
text = "Player 1 WON!"
align = 1
valign = 1

[node name="P2_Win" type="Label" parent="GUI/VBoxContainer"]
visible = false
margin_top = 253.0
margin_right = 1720.0
margin_bottom = 502.0
custom_fonts/font = ExtResource( 3 )
text = "Player 2 WON!"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="GUI/VBoxContainer"]
margin_top = 449.0
margin_right = 1720.0
margin_bottom = 607.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer"]
margin_left = 792.0
margin_right = 928.0
margin_bottom = 158.0
custom_constants/separation = 20

[node name="Menu_Button" type="Button" parent="GUI/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 4 )
text = "Menu"

[node name="Exit_Button" type="Button" parent="GUI/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 136.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="Transition_Out" parent="." instance=ExtResource( 5 )]

[node name="Transition_In" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/VBoxContainer/Menu_Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
